# dbx-token-exchange-sample

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.en.md  README.md  pyproject.toml
.claude/: settings.json
.cursor/rules/: general.mdc
docs/design/: 01_architecture.md  02_auth_flow.md  03_components.md  04_api.md  05_config.md  06_error_handling.md  07_testing.md  README.md
scripts/: get_entra_token.py
src/app/: config.py  main.py
src/app/auth/: entra.py  entra_v1.py  token_cache.py  token_exchange.py
src/app/proxy/: transport.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth_flow.py  test_entra_v1.py  test_mcp_proxy.py
tests/unit/: test_config.py  test_entra_v1.py  test_token_cache.py  test_token_exchange.py  test_transport.py
